// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction with balance 1`] = `
Object {
  "accountOrigin": "123",
  "accountDestination: "123",
  "value": 5.00
}
`;

exports[`Transaction with invalid value 4`] = `
Object {
  "accountOrigin": "123",
  "accountDestination: "123",
  "value": aaaaaa
}
`;

exports[`Transaction with negative value 3`] = `
Object {
  "accountOrigin": "123",
  "accountDestination: "123",
  "value": -2
}
`;

exports[`Transaction with not enough balance 2`] = `
Object {
  "accountOrigin": "123",
  "accountDestination: "123",
  "value": 65536
}
`;
